--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     },
     "require": {
         "php": "^7.1",
-        "composer-plugin-api": "^1.0"
+        "composer-plugin-api": "^1.0",
+        "drush/drush": "^8.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "@stable",
