--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,16 @@
     "require": {
         "php": "^7.1",
         "composer-plugin-api": "^1.0",
+        "composer/installers": "^1.6",
+        "cweagans/composer-patches": "^1.6",
         "drush/drush": "^8.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "@stable",
         "composer/composer": "^1.0"
+    },
+    "conflict": {
+        "drupal/drupal": "<7.65",
+        "drush/drush": "<8.2"
     }
 }
