--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "composer-plugin-api": "^1.0",
         "composer/installers": "^1.6",
         "cweagans/composer-patches": "^1.6",
+        "drupal/drupal": "^7.65",
         "drush/drush": "^8.2"
     },
     "require-dev": {
