--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,11 @@
         "class": "Druidfi\\Mona\\Plugin"
     },
     "require": {
-        "php": "^7.1",
+        "php": "^7.1 || ^8.0",
         "composer-plugin-api": "^1.0 || ^2.0",
-        "composer/installers": "^1.9",
+        "composer/installers": "^1.11",
         "cweagans/composer-patches": "^1.7",
-        "drush/drush": "^8.4"
+        "drush/drush": "^8.5"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "@stable",
@@ -39,7 +39,7 @@
     },
     "conflict": {
         "drupal/core": "8.*",
-        "drupal/drupal": "<7.73",
-        "drush/drush": "<8.4"
+        "drupal/drupal": "<7.81",
+        "drush/drush": "<8.5"
     }
 }
