--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         php-versions: ['7.1','7.2','7.3','7.4','8.0']
-        composer-versions: ['v1','v2']
+        composer-versions: ['v2']
 
     steps:
 
