--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,12 +7,12 @@ jobs:
 
   build:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.3','7.4','8.0']
+        php-versions: ['7.3','7.4','8.0','8.1']
         composer-versions: ['v2']
 
     steps:
