- changed namespaces - swaped drupal for wordpress in composer files

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,13 @@
 {
-    "name": "druidfi/mona-plugin",
+    "name": "mtwango/wordpress-plugin",
     "type": "composer-plugin",
-    "description": "Mona Composer Plugin for Drupal 7 sites",
+    "description": "Composer Plugin for Wordpress sites",
     "license": "MIT",
     "authors": [
+        {
+            "name": "Mtwango",
+            "email": "mtwango@gmail.com"
+        },
         {
             "name": "Druid.fi",
             "email": "info@druid.fi"
@@ -19,28 +23,31 @@
     ],
     "autoload": {
         "psr-4": {
-            "Druidfi\\": "src/"
+            "Mtwango\\": "src/"
         }
     },
     "extra": {
-        "class": "Druidfi\\Mona\\Plugin"
+        "class": "Mtwango\\Wordpress\\Plugin"
     },
     "require": {
-        "php": "^7.3 || ^8.0",
-        "composer-plugin-api": "^2.0 || ^2.1",
-        "composer/installers": "^1.11 || ^2.0",
-        "cweagans/composer-patches": "^1.7",
-        "drush/drush": "^8.4"
+        "php": "^7.4 || ^8.0",
+        "composer-plugin-api": "^2.1",
+        "composer/installers": "^2.2",
+        "cweagans/composer-patches": "^1.7"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "@stable",
-        "composer/composer": "^2.0"
+        "composer/composer": "^2.5"
     },
     "conflict": {
-        "drupal/core": "8.*",
-        "drupal/drupal": "<7.83",
-        "drush/drush": "<8.4"
+        "johnpbloch/wordpress-core": "<6.2"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "cweagans/composer-patches": true
+        }
+    }
 }
