--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ root = true
 [*]
 end_of_line = LF
 indent_style = space
-indent_size = 4
+indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
@@ -21,7 +21,6 @@ indent_size = 4
 indent_style = tab
 
 ; YAML format, 4 spaces
-[*.yaml, *.yml]
-indent_style = space
+[*.{yaml,yml}]
 indent_size = 4
 max_line_length = 160
